Changelog 0.4.7 [20230810]:
- Added New Setting "Terminate on Cloud Sources"

Changelog 0.4.6 [20230808]:
- Fix Sphinx clean function 
- Fixed a small bug with Genres

Changelog 0.4.5 [20230807]:
- Improved Anime Tosho Scrapping
- Escape special characters in Sphinx query

Changelog 0.4.4 [20230806]:
- Fixed Aniwatch

Changelog 0.4.3 [20230806]:
- Readded Otaku Themepak

Changelog 0.4.2 [20230805]:
- Removed Otaku Themepak
- Added 2 New Icon Packs
- Made Image Sizes Smaller

Changelog 0.4.1 [20230804]:
- Separated Providers
- Fixed Season Guessing
- Fixed Animetosho Searching

Changelog 0.4.0 [20230803]:
- Added Four New Icon Packs

Changelog 0.3.99 [20230803]:
- Added file Management Size Settings
- Fixed Kodi Language Settings
- Added Rebuild Database On Update Settings

Changelog 0.3.98 [20230729]:
- Added Clean Cache On Update Settings

Changelog 0.3.97 [20230725]:
- Removed Uncategorized Menus
- Made Category Menus for Movies and TV Shows
- Added Movie Search For Movies
- Added TV Search For TV Shows
- Added Movie Genres for Movies
- Added TV Genres For TV Shows
- Changed alot of Menu Settings

Changelog 0.3.96 [20230723]:
- Moved get season function to utils
- Matched hight Positions on Select Source

Changelog 0.3.95 [20230722]:
- Added Hide Episode Info and Plot Setting
- Fix Scrolling Issue in Source Select

Changelog 0.3.94 [20230720]:
- Fix for Smartscroll 
- Fix for Anime Tosho

Changelog 0.3.93 [20230719]:
- Improved Nyaa Scrapping
- Added Anime Tosho Scrapper
- Added Manual Batch File Selection Setting
- Added Smart Episode Scrolling Setting

Changelog 0.3.92 [20230715]:
- Changed Gogoanime domain

Changelog 0.3.91 [20230714]:
- More improvements on Aniwatch search

Changelog 0.3.90 [20230713]:
- Improved Aniwatch search with romaji titles

Changelog 0.3.89 [20230712]:
- Added Aniwatch scraper
- Removed Animesaturn references 

Changelog 0.3.87 [20230710]:
- Used anify for zoro

Changelog 0.3.86 [20230701]:
- Fix 9anime scraper using anify
